# real_time_cardiac_sim

./: .gitignore  README.md
data_processing/: CMakeLists.txt
data_processing/data/input/: 40000elem_lv_rv.inp  40000fiber.txt  LV1.inp  LV1_fiber.txt  beam.inp  bou_LV1.inp  cube_10_50.inp  cube_111.inp  cube_1_5.inp  heart_mesh_origin.py  lv-rv-fiber.txt  lv-rv.inp  time.inp
data_processing/data/input/LV1_0718/: LV1_0718.inp  faces.inp  fiber.txt
data_processing/data/input/heart/: heart.ele  heart.node
data_processing/data/input/whole_heart/: modelB.ele  modelB.hs  modelB.node  modelB.txt
data_processing/data/output/: 40000elem_lv_rv.ele  40000elem_lv_rv.node  LV1.py  LV1_0718.py  LV1_2.py  LV1_test.py  beam.py  cube_10_50.py  cube_1_5.py  heart_mesh.py  heart_mesh_vert_fiber.py  lv-rv.ele  lv-rv.node  test1.py  whole_heart_without_fiber.py
data_processing/include/pbd_data/: bou_tag.h  datastruct.h  edge_set.h  output_mesh_data.h  read_tet.h  test.h  tetEdgeIds.h  tetSurfaceTriIds.h  tet_set.h
data_processing/src/: 0718.cpp  main_4w_elems_lv_rv_to_fiber.cpp  main_LV1.cpp  main_beam.cpp  main_ex3.cpp  main_ex4_1.cpp  main_ex4_2.cpp  main_inp.cpp  main_lv_rv_40000elem.cpp  main_old.cpp  main_py.cpp  main_py_vert_fiber.cpp  main_whole_heart.cpp
doc/: taichi.md  数据格式.md
project/: main.py  requirements.txt
project/AdditionalExperiments/: 2D_electrophysiology_diffuse.py  QSS_validation.py  cell_time_efficiency.py  example_diff_material_em_scroll_pulse.py
project/Configure/: __init__.py  configure.py
project/Dynamics/: __init__.py  dynamics.py
project/Electrophysiology/: __init__.py  electrophysiology.py
project/GUI/: __init__.py  camera_para.py  camera_parameter.py  catcher.py  display  grabber.py  gui.py  interaction.py  raycaster.py  selector.py
project/Geometry/: __init__.py  body.py  geometrytool.py  read_geo.py
project/PreScene/: __init__.py  prescene.py  (+4 more)
(+18 files in other folders)
